--- a/elk.yml
+++ b/elk.yml
@@ -13,7 +13,7 @@
 - name: Ensure SELinux is set to enforcing mode
   ansible.builtin.lineinfile:
     path: /etc/kibana/kibana.yml
-    regexp: '#server.host:'
+    regexp: "server.host"
     line: "server.host: 0.0.0.0"
 
     - name: Start Services
