--- a/elk.yml
+++ b/elk.yml
@@ -10,11 +10,11 @@
           - https://artifacts.elastic.co/downloads/kibana/kibana-9.2.4-x86_64.rpm
           - https://artifacts.elastic.co/downloads/logstash/logstash-9.2.4-x86_64.rpm
 
-- name: Ensure SELinux is set to enforcing mode
-  ansible.builtin.lineinfile:
-    path: /etc/kibana/kibana.yml
-    regexp: "server.host"
-    line: "server.host: 0.0.0.0"
+    - name: Ensure SELinux is set to enforcing mode
+      ansible.builtin.lineinfile:
+        path: /etc/kibana/kibana.yml
+        regexp: "#server.host:"
+        line: "server.host: 0.0.0.0"
 
     - name: Start Services
       ansible.builtin.systemd_service:
