--- a/logstash.yml
+++ b/logstash.yml
@@ -5,7 +5,7 @@
     - name: Copy Logstash
       ansible.builtin.template:
         src: logstash.conf
-        dest: /etc/logstash/conf.f/logstash.conf
+        dest: /etc/logstash/conf.d/logstash.conf
 
     - name: Restart Logstash
       ansible.builtin.systemd_service:
