--- a/logstash.conf
+++ b/logstash.conf
@@ -6,7 +6,7 @@ input {
 
 output {
   elasticsearch {
-    hosts => ["http://localhost:9200"]
+    hosts => ["https://localhost:9200"]
     index => "%{[@metadata][beat]}-%{[@metadata][version]}"
     user => "elastic"
     password => "X759hTXttqbzDC=SudWF"
