--- a/logstash.conf
+++ b/logstash.conf
@@ -4,10 +4,19 @@ input {
   }
 }
 
+filter {
+  if [kubernetes][container][name] == "controller" {
+      grok {
+        match => { "message" => "%{IPORHOST:client_ip} %{DATA:ident} %{DATA:auth} \[%{HTTPDATE:timestamp}\] \"%{WORD:http_method} %{URIPATHPARAM:request_uri} HTTP/%{NUMBER:http_version}\" %{INT:status_code} %{INT:bytes_sent} \"%{DATA:referrer}\" "%{DATA:user_agent}" %{INT:request_length} %{NUMBER:request_time} \[%{DATA:frontend_name}\] \[%{DATA:upstream_info}\] %{IPORHOST:upstream_ip}:%{INT:upstream_port} %{INT:upstream_response_length} %{NUMBER:upstream_response_time} %{INT:upstream_status} %{NOTSPACE:request_id}" }
+      }
+  }
+
+}
+
 output {
   elasticsearch {
     hosts => ["https://localhost:9200"]
-    index => "%{[@metadata][beat]}-%{[@metadata][version]}"
+    index => "%{[kubernetes][container][name]}-%{+YYYY.MM.dd}"
     user => "elastic"
     password => "X759hTXttqbzDC=SudWF"
     ssl_verification_mode => "none"
