--- a/logstash.conf
+++ b/logstash.conf
@@ -11,6 +11,12 @@ filter {
       }
   }
 
+  if [kubernetes][container][name] == "shipping" {
+      grok {
+        match => { "message" => "%{TIMESTAMP_ISO8601:log_timestamp}\s+%{LOGLEVEL:log_level}\s+%{INT:pid}\s+---\s+\[%{DATA:thread}\]\s+%{JAVACLASS:logger}\s+:\s+%{GREEDYDATA:log_message}" }
+      }
+  }
+
 }
 
 output {
