--- a/logstash.conf
+++ b/logstash.conf
@@ -13,9 +13,9 @@ filter {
 
   if [kubernetes][container][name] == "shipping" {
       grok {
-        match => { "message" => "%{TIMESTAMP_ISO8601:log_timestamp}\s+%{LOGLEVEL:log_level}\s+%{INT:pid}\s+---\s+\[%{DATA:thread}\]\s+%{JAVACLASS:logger}\s+:\s+%{GREEDYDATA:log_message}" }
+        match => { "message" => "%{TIMESTAMP_ISO8601:timestamp}\s+%{LOGLEVEL:log_level}\s+%{NUMBER:pid}\s+---\s+\[%{DATA:thread}\]\s+%{JAVACLASS:class}\s+:\s+%{GREEDYDATA:log_message}" }
       }
-  }
+    }
 
 }
 
