--- a/logstash.conf
+++ b/logstash.conf
@@ -7,7 +7,7 @@ input {
 filter {
   if [kubernetes][container][name] == "controller" {
       grok {
-        match => { "message" => "%{IPORHOST:client_ip} %{DATA:ident} %{DATA:auth} \[%{HTTPDATE:timestamp}\] \"%{WORD:http_method} %{URIPATHPARAM:request_uri} HTTP/%{NUMBER:http_version}\" %{INT:status_code} %{INT:bytes_sent} \"%{DATA:referrer}\" \"%{DATA:user_agent}\" %{INT:request_length} %{NUMBER:request_time} \[%{DATA:frontend_name}\] \[%{DATA:upstream_info}\] %{IPORHOST:upstream_ip}:%{INT:upstream_port} %{INT:upstream_response_length} %{NUMBER:upstream_response_time} %{INT:upstream_status} %{NOTSPACE:request_id}" }
+        match => { "message" => "%{IPORHOST:client_ip} %{DATA:ident} %{DATA:auth} \[%{HTTPDATE:timestamp}\] \"%{WORD:http_method} %{URIPATHPARAM:request_uri} HTTP/%{NUMBER:http_version}\" %{INT:status_code:int} %{INT:bytes_sent:int} \"%{DATA:referrer}\" \"%{DATA:user_agent}\" %{INT:request_length} %{NUMBER:request_time} \[%{DATA:frontend_name}\] \[%{DATA:upstream_info}\] %{IPORHOST:upstream_ip}:%{INT:upstream_port} %{INT:upstream_response_length} %{NUMBER:upstream_response_time:float} %{INT:upstream_status:int} %{NOTSPACE:request_id}" }
       }
   }
 
